Uploaded image for project: 'Lustre'
  1. Lustre
  2. LU-16520

CentOS 7.6 build failure on strscpy. Move strscpy to lnet/include/lnet/lib-types.h

XMLWordPrintable

    • 3
    • 9223372036854775807

      Testing on CentOS 7.6 build fails with:

      /home/shaun/lustre-release/lnet/klnds/o2iblnd/o2iblnd.c: In function ‘kiblnd_startup’:
      /home/shaun/lustre-release/lnet/klnds/o2iblnd/o2iblnd.c:3608:3: error: implicit declaration of function ‘strscpy’ [-Werror=implicit-function-declaration]
         strscpy(ifname, ifaces[i].li_name, sizeof(ifname));
         ^
      

      Move strscpy to lnet/include/lnet/lib-types.h so it is available to lnet/klnds/o2iblnd/o2iblnd.c

            stancheff Shaun Tancheff
            stancheff Shaun Tancheff
            Votes:
            0 Vote for this issue
            Watchers:
            4 Start watching this issue

              Created:
              Updated:
              Resolved: