libcfs/include/libcfs/linux/linux-misc.h
@@ -177,6 +177,10 @@ static inline void *cfs_kallsyms_lookup_name(const char *name)
 }
 #endif
 
+#ifndef HAVE_STRSCPY
+#define strscpy(s1, s2, sz)    strlcpy((s1), (s2), (sz))
+#endif
+
 #ifndef HAVE_KOBJ_TYPE_DEFAULT_GROUPS
 #define default_groups			default_attrs
 #define KOBJ_ATTR_GROUPS(_name)		_name##_attrs
